--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <div class="qr-img-contntainer">
         <img src="images/image-qr-code.png">
       </div>
-      <div class="qr-description-container">
+      <section class="qr-description-container">
         <header>
           <h1 class="qr-header">Improve your front-end skills by building projects</h1>
         </header>
         <p class="qr-description">Scan the QR code to visit Frontend Mentor 
           and take your coding skills to the next level
         </p>
-      </div>
+      </section>
     </div>
   </div>
   
