--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
   <div class="container">
-    <div class="qr-container">
+    <main class="qr-container">
       <div class="qr-img-contntainer">
-        <img src="images/image-qr-code.png">
+        <img src="images/image-qr-code.png" alt="qr code">
       </div>
       <section class="qr-description-container">
         <header>
@@ -26,7 +26,7 @@
           and take your coding skills to the next level
         </p>
       </section>
-    </div>
+    </main>
   </div>
   
   <!-- <div class="attribution">
